move surefire args to parent pom