@@ -66,6 +66,8 @@
                 <configuration>
                     <argLine>
                         @{argLine} --illegal-access=permit
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
